--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
+    "scripts": "^0.1.0",
     "simple-slider": "^1.0.1",
     "slick-carousel": "^1.8.1"
   },
