--- a/backend/src/Api/appsettings.Development.json
+++ b/backend/src/Api/appsettings.Development.json
@@ -12,6 +12,6 @@
         "Audience": "PatitasACasa"
     },
     "ConnectionStrings": {
-        "DefaultConnection": "User ID=myuser;Password=superpassword;Host=localhost;Port=5432;Database=patitasacasa;"
+        "DefaultConnection": "User ID=myuser;Password=superpassword;Host=localhost;Port=5432;Database=patitasacasa; IntegratedSecurity=true"
     }
 }
