--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -29,6 +29,7 @@ services:
             - "ConnectionStrings__DefaultConnection=User ID=postgres;Password=postgres;Server=db;Port=5432;Database=patitasacasa;IntegratedSecurity=true"
         networks:
             - patitasacasa-network
+        restart: on-failure
 volumes:
     patitasacasa-data:
 networks:
