--- a/backend_node/tsconfig.json
+++ b/backend_node/tsconfig.json
@@ -15,6 +15,6 @@
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false
   },
-  "include": ["./src/**/*"],
+  "include": ["./**/**/*"],
   "exclude": ["node_modules", "build", "src/test"]
 }
