--- a/backend_node/.env_example
+++ b/backend_node/.env_example
@@ -9,6 +9,7 @@ CLOUDINARY_ANTOHER=
 
 #config database connection mongo.
 DB_STRING_CONNECTION=
+DB_STRING_CONNECTION_TEST=mongodb+srv://notgame:passwordkj1A@01bdstore.ke4ud1x.mongodb.net/happypetest?retryWrites=true&w=majority
 DB_CONNECTION=
 DB_HOST=
 DB_PORT=
