--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -31,6 +31,7 @@
     "zod": "^3.22.4"
   },
   "dependencies": {
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
