--- a/backend_node/.env_example
+++ b/backend_node/.env_example
@@ -4,8 +4,10 @@ APP_URL=http://localhost
 APP_PORT=4000
 
 
+
+CLOUDINARY_NAME=
 CLOUDINARY_KEY=
-CLOUDINARY_ANTOHER=
+CLOUDINARY_API=
 
 #config database connection mongo.
 DB_STRING_CONNECTION=
