--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.16",
     "@types/express": "4.17.20",
     "@types/node": "20.8.10",
     "@typescript-eslint/eslint-plugin": "6.9.1",
@@ -31,6 +32,7 @@
     "zod": "^3.22.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
