--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.16",
     "@types/express": "4.17.20",
     "@types/node": "20.8.10",
