--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -33,6 +33,7 @@
     "zod": "^3.22.4"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
