--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@getbrevo/brevo": "^1.0.1",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
