--- a/backend_node/.env_example
+++ b/backend_node/.env_example
@@ -3,7 +3,7 @@ APP_ENV=development
 APP_HOST=http://localhost
 APP_PORT=4000
 
-
+ACCESS_TOKEN_SECRET="Patitas en Casa modo prueba"
 
 CLOUDINARY_NAME=
 CLOUDINARY_KEY=
@@ -12,7 +12,7 @@ CLOUDINARY_API=
 
 #config sendinblue
 SENDINBLUE_KEY= 
-SMTP_EMAIL=
+EMAIL_CORPORATIVO=
 
 #config database connection mongo.
 DB_STRING_CONNECTION=
