--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -19,6 +19,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.16",
     "@types/express": "4.17.20",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "20.8.10",
     "@typescript-eslint/eslint-plugin": "6.9.1",
     "@typescript-eslint/parser": "6.9.1",
@@ -39,6 +40,7 @@
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "mongoose-slug-generator": "^1.0.4"
   }
