--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.16",
     "@types/express": "4.17.20",
@@ -37,6 +38,7 @@
     "@getbrevo/brevo": "^1.0.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
