update example env.

--- a/backend_node/.env.example
+++ b/backend_node/.env.example
@@ -4,6 +4,8 @@ APP_HOST=http://localhost
 APP_PORT=4000
 
 ACCESS_TOKEN_SECRET="Patitas en Casa modo prueba"
+REFRESH_TOKEN_SECRET=
+TOKEN_EXPIRES="1d"
 
 CLOUDINARY_NAME=
 CLOUDINARY_KEY=
