--- a/backend_node/.env.example
+++ b/backend_node/.env.example
@@ -24,4 +24,12 @@ DB_HOST=
 DB_PORT=
 DB_DATABASE=
 DB_USERNAME=
-DB_PASSWORD=|
+DB_PASSWORD=
+
+#User admin
+ADMIN_ROL="superadmin"
+ADMIN_EMAIL="phew_misame@hotmail.com"
+ADMIN_PASS="password1A@"
+ADMIN_NAME="dont touch"
+ADMIN_LAST="admin"
+ADMIN_ALIAS="superman"
