--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@emailjs/browser": "^3.11.0",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
+    "cloudinary-react": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
     "scripts": "^0.1.0",
