--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -35,7 +35,8 @@
     "zod": "3.22.4"
   },
   "dependencies": {
-    "@getbrevo/brevo": "1.0.1",
+    "@getbrevo/brevo": "^1.0.1",
+    "@types/nodemailer": "^6.4.14",
     "bcrypt": "5.1.1",
     "cloudinary": "1.41.0",
     "cookie-parser": "1.4.6",
@@ -44,6 +45,7 @@
     "express": "4.18.2",
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.0.0",
-    "mongoose-slug-generator": "1.0.4"
+    "mongoose-slug-generator": "1.0.4",
+    "nodemailer": "^6.9.8"
   }
 }
