FIX: adding new envrironment

--- a/backend_node/.env.example
+++ b/backend_node/.env.example
@@ -16,6 +16,15 @@ CLOUDINARY_API=
 SENDINBLUE_KEY= 
 EMAIL_CORPORATIVO=
 
+#SMTP 
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=465
+STMP_TLS=true
+SMTP_USERNAME=patitasacasaorg@gmail.com
+SMTP_PASSWORD=
+SMTP_SENDER="patitasacasaorg@gmail.com"
+
+
 #config database connection mongo.
 DB_STRING_CONNECTION=
 DB_STRING_CONNECTION_TEST=mongodb+srv://notgame:passwordkj1A@01bdstore.ke4ud1x.mongodb.net/happypetest?retryWrites=true&w=majority
