--- a/backend_node/package.json
+++ b/backend_node/package.json
@@ -22,6 +22,9 @@
     "@types/express": "4.17.20",
     "@types/jsonwebtoken": "9.0.5",
     "@types/node": "20.8.10",
+    "@types/nodemailer": "6.4.14",
+    "@types/swagger-jsdoc": "6.0.4",
+    "@types/swagger-ui-express": "4.1.6",
     "@typescript-eslint/eslint-plugin": "6.9.1",
     "@typescript-eslint/parser": "6.9.1",
     "eslint": "8.52.0",
@@ -35,8 +38,7 @@
     "zod": "3.22.4"
   },
   "dependencies": {
-    "@getbrevo/brevo": "^1.0.1",
-    "@types/nodemailer": "^6.4.14",
+    "@getbrevo/brevo": "1.0.1",
     "bcrypt": "5.1.1",
     "cloudinary": "1.41.0",
     "cookie-parser": "1.4.6",
@@ -46,6 +48,8 @@
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.0.0",
     "mongoose-slug-generator": "1.0.4",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "6.9.8",
+    "swagger-jsdoc": "6.0.1",
+    "swagger-ui-express": "5.0.0"
   }
 }
