--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "cloudinary-react": "^1.8.1",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
