--- a/backend_node/.eslintrc.json
+++ b/backend_node/.eslintrc.json
@@ -12,7 +12,7 @@
     "project": "./tsconfig.json",
     "tsconfigRootDir": "."
   },
-  "plugins": ["@typescript-eslint", "import", "prettier"],
+  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
@@ -25,22 +25,10 @@
   "rules": {
     "no-console": "off",
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-
     "quotes": [2, "double", { "allowTemplateLiterals": true }],
-    /* "comma-dangle": [
-      "error",
-      {
-        "arrays": "never",
-
-        "imports": "never",
-        "exports": "never",
-        "functions": "never"
-      }
-    ], */
     "max-len": ["error", 140],
     "import/estensions": "off",
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
-    "import/no-unresolved": ["error", { "ignore": ["@"] }],
     "import/prefer-default-export": "off",
     "import/no-default-export": "error",
     "camelcase": "off",
