--- a/backend_node/.env.example
+++ b/backend_node/.env.example
@@ -26,7 +26,7 @@ SMTP_SENDER="patitasacasaorg@gmail.com"
 
 
 #config database connection mongo.
-DB_STRING_CONNECTION=
+DB_STRING_CONNECTION=mongodb+srv://patitasAcasa:<password>@patitasaasa.vo6s0vj.mongodb.net/?retryWrites=true&w=majority&appName=patitasAasa
 DB_STRING_CONNECTION_TEST=mongodb+srv://notgame:passwordkj1A@01bdstore.ke4ud1x.mongodb.net/happypetest?retryWrites=true&w=majority
 DB_CONNECTION=
 DB_HOST=
