--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-slick": "^0.29.0",
     "scripts": "^0.1.0",
     "simple-slider": "^1.0.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
